# synth

./: CMakeLists.txt  README.md  compile.sh  imgui.ini
lib/: portaudio_x64.lib
src/: RtAudio.cpp  biquad.h  constants.h  envelope.h  glprogram.c  glprogram.h  imgui.h  imgui_impl_glfw_gl3.cpp  imguimesh.cpp  imguimesh.h  input.c  input.h  ints.h  main.cpp  plot.py  shader.c  shader.h  signal.h  socks.cpp  socks.h  synth.h  voice.h  wave.cpp  wave.h  window.c  window.cpp  window.h
